priv/static/css/app.css
/* ... */
/* Custom page header */
.header {
  border-bottom: 1px solid #e5e5e5;
}
/* Make the masthead heading the same height as the navigation */
.header h3 {
  padding-bottom: 19px;
  margin-top: 0;
  margin-bottom: 0;
  line-height: 40px;
}

/* Custom page footer */
.footer {
  padding-top: 19px;
  color: #777;
  border-top: 1px solid #e5e5e5;
}

/* Customize container */
@media (min-width: 768px) {
  .container {
    max-width: 730px;
  }
}
.container-narrow > hr {
  margin: 30px 0;
}

/* Main marketing message and sign up button */
.jumbotron {
  text-align: center;
  border-bottom: 1px solid #e5e5e5;
}
.jumbotron .btn {
  padding: 14px 24px;
  font-size: 21px;
}

/* Supporting marketing content */
.marketing {
  margin: 40px 0;
}
.marketing p + h4 {
  margin-top: 28px;
}

/* Responsive: Portrait tablets and up */
@media screen and (min-width: 768px) {
  /* Remove the padding we set earlier */
  .header,
  .marketing,
  .footer {
    padding-right: 0;
    padding-left: 0;
  }
  /* Space out the masthead */
  .header {
    margin-bottom: 30px;
  }
  /* Remove the bottom border on the jumbotron for visual effect */
  .jumbotron {
    border-bottom: 0;
  }
}

#header-row th {
  background-color: white;
  border-top: 0px;
  text-align: center;
}

.table {
  text-align: center;
}

.campaign-name-cell {
  text-align: left;
}

.panel div {
  font-size: 0.98em;
}

.campaign-id-header {
  width: 70px;
  float:left;
}

.campaign-name-header {
  width: 400px;
  float:left;
  color: #3299CC;
}

.campaign-status-header {
  width: 100px;
  float:left;
}

.campaign-rem-days-header {
  width: 70px;
  float:left;
}

.campaign-state-header {
  text-align: right;
}

